--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@storybook/vue3": "^10.1.8",
     "@tanstack/vue-query": "^5.92.1",
+    "@tanstack/vue-virtual": "^3.13.13",
     "axios": "^1.13.2",
     "markdown-it": "^14.1.0",
     "pinia": "^3.0.4",
