--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint": "^9.39.1",
     "eslint-plugin-storybook": "^10.1.8",
     "eslint-plugin-vue": "~10.5.1",
+    "fast-glob": "^3.3.3",
     "jiti": "^2.6.1",
     "npm-run-all2": "^8.0.4",
     "playwright": "^1.57.0",
