--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pinia": "^3.0.4",
     "vaul-vue": "^0.4.1",
     "vue": "^3.5.25",
+    "vue-advanced-cropper": "^2.8.9",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
