--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,3 @@
 VITE_S3_BASE_URL=https://njjc-media.s3.ap-northeast-2.amazonaws.com
-# VITE_API_BASE_URL=http://localhost:8000
-VITE_API_BASE_URL=https://api.njjc.kro.kr
+VITE_API_BASE_URL=http://localhost:8000
+# VITE_API_BASE_URL=https://api.njjc.kro.kr
